--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cachetools==5.3.0
 certifi==2022.12.7
 charset-normalizer==3.0.1
 click==8.1.3
+Flask==2.2.2
 flatbuffers==23.1.21
 gast==0.4.0
 google-auth==2.16.0
@@ -12,6 +13,8 @@ google-pasta==0.2.0
 grpcio==1.51.1
 h5py==3.8.0
 idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
 joblib==1.2.0
 keras==2.11.0
 libclang==15.0.6.1
